# MCPFinanceiro

./: .env.example  .gitignore  Dockerfile  README  README.md  alembic.ini  database.py  docker-compose.yml  mcp.db  migrate_db.py  pyproject.toml  requirements.txt  run copy.py  run.py
alembic/: env.py
alembic/versions/: 615e4739a88b_inclusoes_de_outros_campos_adicionais_.py  9a6b409b0fec_inclusoes_de_outros_campos_adicionais_.py  9cac4c2517dc_inclusoes_de_outros_campos_adicionais_.py
app/: config.py  database.py
app/api/: auth.py  deps.py  mcp.py  pessoas.py
app/crud/: pessoa.py
app/models/: pessoa.py
app/schemas/: pessoa copy.py  pessoa.py
services/: people.py
src/mcp_financeiro/: api.py  auth.py  config.py  mcp.py  models.py
tests/: conftest.py  test_people.py
